# Nathan-ML-intern-skills-test

./: README.md  pyproject.toml
notebooks/: shape_classifier.ipynb
