[project]
name = "nathan-ml-intern-skills-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
